k8s/eks-avalanche2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: avalanche-service-2
  namespace: store-load-test
  labels:
    app: avalanche-app-2
spec:
  selector:
    app: avalanche-app-2
  ports:
    - protocol: TCP
      port: 2112
      targetPort: 2112
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: avalanche-2
  namespace: store-load-test
  labels:
    app: avalanche-app-2
spec:
  replicas: 32
  selector:
    matchLabels:
      app: avalanche-app-2
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /stats
        prometheus.io/port: "2112"
      labels:
        app: avalanche-app-2
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
      containers:
      - name: avalanche-app
        image: docker.internal.sysdig.com/avalanche:goldman-beacon-6
        resources:
          limits:
            cpu: 5
            memory: 15Gi
          requests:
            cpu: 5
            memory: 15Gi
        args:
        - --metric-count=1000
        - --series-count=1000
        - --port=9001
        - --series-interval=36000
        - --metric-interval=3600000
        - --value-interval=10
        - --remote-url=https://stefan-beacon-perf-kops-fre-lb-52c5173c29c4d9ca.elb.us-east-1.amazonaws.com/prometheus/remote/write
        - --remote-requests-count=10000000
        - --remote-write-interval=100000ms
        - --remote-read-url=https://stefan-beacon-perf-kops-fre-lb-52c5173c29c4d9ca.elb.us-east-1.amazonaws.com:443/prometheus
        - --const-label=instance=$(INSTANCE)
        - --remote-batch-size=80
        - --remote-read-batch-size=100
        - --remote-read-requests-count=100
        - --remote-read-interval=32s
        - --http-bearer-token=1da28aff-eb31-47d9-b0c7-5ad4f9e323ae
        - --record-rule-probe-lookback=2m
        - --record-rule-max-count=3223
        ports:
        - containerPort: 9001
        - containerPort: 2112
      imagePullSecrets:
        - name: avalanche-pull-secret
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: store-load-test
  name: ingress-avalanche-2
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: avalanche-service-2
              servicePort: 2112
